--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ html, body {
     }
     
     .lil-leftside {
+        color: white;
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -293,10 +294,10 @@ html, body {
     .info-main-content {
         /* width: 100%; */
         text-align: center;
+        color: white;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-    
     
     }
     
@@ -310,6 +311,12 @@ html, body {
         flex-direction: column;
     }
     
+
+    .location-info a {
+        color: black;
+        text-decoration: none;
+    }
+
     .location-info, .timetable-info, .info-content {
         line-height: 2rem;
         margin-top: 3rem;
@@ -357,6 +364,10 @@ html, body {
 
     .lil-rightside img {
         display: none;
+    }
+
+    body {
+        overflow-x: hidden;
     }
 
     main {
