--- a/style.css
+++ b/style.css
@@ -290,6 +290,10 @@ html, body {
         width: 100%;
         height: 100%;
     }
+
+    .info-cell {
+        margin-bottom: 5rem;
+    }
     
     .info-main-content {
         /* width: 100%; */
@@ -348,6 +352,32 @@ html, body {
         font-weight: bold;
         line-height: 1.2rem;
     }
+
+    .main-footer-content {
+        margin: 2rem 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .footer-left-side, .footer-right-side {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer-left-side {
+
+        margin-left: 1rem;
+    }
+
+    .footer-right-side {
+        margin-top: 3rem;   
+        justify-content: center;
+        align-items: center;
+    }
+
     
     .footer-image img {
         height: 10rem;
@@ -579,15 +609,30 @@ html, body {
         align-items: center;
         text-align: center;
     }
+
+ 
     
     footer {
         background-color: rgb(22, 21, 21);
         color: white;
         display: flex;
         align-items: center;
+        justify-content: space-around;
         height: 30vh;
         font-weight: bold;
         line-height: 1.2rem;
+    }
+
+    .footer-right-side, .footer-left-side {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+    }
+
+    .footer-social-media {
+        display: flex;
+        gap: 10px;
     }
     
     
@@ -738,4 +783,10 @@ html, body {
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     background-color: white;
+}
+
+
+.footer-social-logo {
+    height: 2rem;
+    width: 2rem;
 }
