--- a/style.css
+++ b/style.css
@@ -36,17 +36,49 @@ header.sticky {
     color: black;
 }
 
-header.sticky li a {
+header.sticky .logo {
     color: black;
 }
 
 header.sticky .bar {
-    background-color: black;
+    background-color: white;
+}
+
+header.sticky li a{
+    color: white;
 }
 
 
+.img-divider img {
+    height: 5rem;
+    width: 5rem;
+}
 
 
+.title {
+    --text-divider-gap: 1rem;
+    display: flex;
+    align-items: center;
+    font-size: 0.9375rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+  }
+  
+  .title::before, .title::after {
+    content: '';
+    height: 2px;
+    background-color: silver;
+    /* flex-grow: 1; */
+    width: 10rem;
+  }
+  
+  .title::before {
+    margin-right: var(--text-divider-gap);
+  }
+  
+  .title::after {
+    margin-left: var(--text-divider-gap);
+  }
 
 @media only screen and (max-width: 736px) {
     body, html {
@@ -77,6 +109,8 @@ header.sticky .bar {
     }
     
     .logo {
+        text-decoration: none;
+        color: white;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -158,7 +192,9 @@ header.sticky .bar {
     
     .nav-menu-phone.active {
         left: 0;
+        overflow:hidden;
     }
+
 
 
     .main-screen {
@@ -195,6 +231,11 @@ header.sticky .bar {
         flex-direction: column;
         text-align: center;
     }
+
+    .lil-leftside {
+        padding: 2rem;
+    }
+    
     
     .menu-section {
         background-color: var(--primary-color);
@@ -206,7 +247,7 @@ header.sticky .bar {
         text-align: center;
     }
     .title h2 {
-        margin: 0;
+        /* margin: 0; */
         padding: 20px;
     }
     
@@ -416,6 +457,10 @@ header.sticky .bar {
         width: 10rem;
     }
 
+    .footer-image.computer {
+        display: none;
+    }
+
     
 
 }
@@ -485,9 +530,13 @@ header.sticky .bar {
 
     
     .logo {
+        text-decoration: none;
+        color: white;
         display: flex;
         flex-direction: column;
-        text-wrap: nowrap;
+        justify-content: center;
+        text-align: center;
+        width: 25rem;
     }
     
     .logo-content {
@@ -803,6 +852,10 @@ header.sticky .bar {
         line-height: 2rem;
     }
 
+
+    .footer-right-side.phone {
+        display: none;
+    }
 }
 
 
