--- a/contactUs.css
+++ b/contactUs.css
@@ -6,10 +6,28 @@
 
 body {
     background-color: var(--secondary-color);
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
 
 }
 
+.banner {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.banner img {
+    justify-content: center;
+    border-radius: 20px;
+    margin-top: 10rem;
+    height: auto;
+    width: 50vw;
+}
+
 .main-screen {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
