--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ html, body {
 
 body {
     margin: 0;
-    box-sizing: border-box;
-    font-family: "Calibri", sans-serif;
+    /* box-sizing: border-box; */
+    /* font-family: "Calibri", sans-serif; */
     height: 100%; /* Make sure the body takes the full height of the viewport */
+    width: 100%;
     /* overflow: auto; Enable scrolling by default */
 }
 
