--- a/contactUs.css
+++ b/contactUs.css
@@ -5,40 +5,64 @@
 }
 
 body {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     /* display: flex;
     flex-direction: column;
     align-items: center; */
 
 }
 
-.banner {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+.nav-items li a:hover {
+    color: black;
 }
 
-.banner img {
-    justify-content: center;
-    border-radius: 20px;
-    margin-top: 10rem;
-    height: auto;
-    width: 50vw;
-}
 
+.email-logo{
+    cursor: pointer;
+}
 .main-screen {
-    position: relative;
+    text-align: center;
+    background-color: var(--primary-color);
     display: flex;
+    bottom: 20rem;
+
     flex-direction: column;
     align-items: center;
     width: 100%;
+}
+
+.contact-form {
+    color: white;
+    background-color: var(--secondary-color);
+    display: flex;
+    justify-content: center;
+    -webkit-box-shadow: 0px 0px 14px 6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 14px 6px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 14px 6px rgba(0,0,0,0.75);
+    border-radius: 10px;
+    margin: 3rem;
+    height: 23rem;
+}
+
+.messageText {
+    height: 3rem;
 }
 
 form {
+    margin: 2rem;
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    align-items: center;
+    gap: 1rem;
+    /* align-items: center; */
+}
+
+form button {
+    background-color: var(--secondary-color);
+    border: none;
+}
+
+form label {
+    text-align: left;
 }
 
