--- a/style.css
+++ b/style.css
@@ -4,19 +4,6 @@
     --third-color: #c26124;
 }
 
-.hidden {
-    opacity: 0;
-    filter: blur(5px);
-    transform: translateX(-100%);
-    transition: all 1s;
-}
-
-.show {
-opacity: 1;
-filter: blur(0);
-transform: translateX(0);
-}
-
 .email-logo{
     cursor: pointer;
 }
@@ -132,7 +119,38 @@ header.sticky li a{
     margin-left: var(--text-divider-gap);
   }
 
-@media only screen and (max-width: 736px) {
+
+  .hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+/* animation design  */
+
+
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+}
+
+.show {
+opacity: 1;
+filter: blur(0);
+transform: translateX(0);
+}
+
+
+.blur {
+    background-image: none;
+    backdrop-filter: blur(10px);
+    background-color: white; /* Adjust the opacity as needed */
+}
+@media only screen and (max-width: 769px) {
     body, html {
         overflow-x: hidden;
     }
@@ -557,26 +575,58 @@ header.sticky li a{
 
 
 
-@media only screen and (min-width: 736px) {
+@media only screen and (min-width: 769px) {
+
+    .menu {
+        padding-top: 3rem;
+    }
 
     .lil-rightside img {
         display: none;
     }
 
     body {
+        width: 100vw;
         overflow-x: hidden;
+        margin: 0;
+        padding: 0;
     }
 
+
     main {
+        width: 100%;
         color: white;
         min-height: 100vh;
-        width: 100%;
         display: flex;
         flex-direction: column;
-        background-image: url('images/main_image.png');
-        background-size: auto;
+       
+    }
+
+    .background-container {
+        position: absolute;
+        left: 0; top: 0;
+        width: 100%;
+        min-height: 100vh;
+        z-index: -5;
+        /* background-image: url('images/main_image.png'); */
+        /* background-size: cover;
         background-repeat: no-repeat;
-        background-position: center top -150px;        
+        background-position: center;    */
+    }
+
+    .background {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+    }
+
+    .showing {
+        opacity: 1;
+        z-index: -1;
+        transition: none;
     }
 
     .nav-menu-phone {
