--- a/style.css
+++ b/style.css
@@ -150,9 +150,10 @@ transform: translateX(0);
     backdrop-filter: blur(10px);
     background-color: white; /* Adjust the opacity as needed */
 }
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: 966px) {
     body, html {
         overflow-x: hidden;
+        width: 100vw;
     }
     .info-cell a img {
         width: 100%;
@@ -160,7 +161,7 @@ transform: translateX(0);
     main {
         color: white;
         height: 100vh;
-        width: 100%;
+        width: 100vw;
         display: flex;
         /* flex-direction: column;
         background-image: url('images/main_image.png');
@@ -173,7 +174,7 @@ transform: translateX(0);
     .background-container {
         position: absolute;
         left: 0; top: 0;
-        width: 100%;
+        width: 100vw;
         min-height: 100vh;
         z-index: -5;
         /* background-image: url('images/main_image.png'); */
@@ -184,8 +185,8 @@ transform: translateX(0);
 
     .background {
         position: absolute;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         object-fit: cover;
         opacity: 0;
         transition: opacity 1s ease-in-out;
@@ -602,7 +603,7 @@ transform: translateX(0);
 
 
 
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 966px) {
 
     .menu {
         padding-top: 3rem;
@@ -619,11 +620,16 @@ transform: translateX(0);
         padding: 0;
     }
 
+    header {
+        width: 100vw;
+    }
+
 
     main {
         width: 100%;
         color: white;
-        min-height: 100vh;
+        min-height: 100%;
+        height: 100vh;
         display: flex;
         flex-direction: column;
        
@@ -643,8 +649,8 @@ transform: translateX(0);
 
     .background {
         position: absolute;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         object-fit: cover;
         opacity: 0;
         transition: opacity 1s ease-in-out;
@@ -661,9 +667,14 @@ transform: translateX(0);
     }
     
     .nav-menu {
+        margin-left: 1rem;
+        margin-right: 1rem;
+
+        width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
+        /* justify-content: center; */
     }
     
     .left-nav {
