--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     --primary-color:#219C90;
     --secondary-color:#d86b27;
     --third-color: #c26124;
+    --white-text: rgb(225, 224, 224);
 }
 @font-face {
     font-family: vinylFont;
@@ -42,7 +43,7 @@ body {
 .location-info a span{
     text-decoration: none;
 
-    color: white;
+    color: var(--white-text);
     display: flex;
     flex-direction: column;
 }
@@ -166,7 +167,7 @@ transform: translateX(0);
         width: 100%;
     }
     main {
-        color: white;
+        color: var(--white-text);
         height: 100vh;
         width: 100vw;
         display: flex;
@@ -297,7 +298,7 @@ transform: translateX(0);
     }
 
     .nav-items li a {
-        color: white;
+        color: var(--white-text);
         text-decoration: none;
         transition: 0.7s ease;
 
@@ -319,6 +320,16 @@ transform: translateX(0);
         display: flex;
         flex-direction: column;
         width: 30rem;
+    }
+
+    .main-screen h2 {
+        font-size: 2rem;
+        height: 30vh;
+        width: 30vw;
+    }
+
+    .main-screen h3 {
+        padding-top: 5rem;
     }
     
     .rightSide {
@@ -350,7 +361,7 @@ transform: translateX(0);
     }
     
     .lil-leftside {
-        color: white;
+        color: var(--white-text);
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -507,7 +518,7 @@ transform: translateX(0);
     .info-main-content {
         /* width: 100%; */
         text-align: center;
-        color: white;
+        color: var(--white-text);
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -559,7 +570,7 @@ transform: translateX(0);
 
     footer {
         background-color: rgb(22, 21, 21);
-        color: white;
+        color: var(--white-text);
         display: flex;
         align-items: center;
         /* height: 30vh; */
@@ -634,7 +645,7 @@ transform: translateX(0);
 
     main {
         width: 100%;
-        color: white;
+        color: var(--white-text);
         min-height: 100%;
         height: 100vh;
         display: flex;
@@ -716,7 +727,7 @@ transform: translateX(0);
     
     .logo {
         text-decoration: none;
-        color: white;
+        color: var(--white-text);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -882,7 +893,7 @@ transform: translateX(0);
     
     footer {
         background-color: rgb(22, 21, 21);
-        color: white;
+        color: var(--white-text);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -947,7 +958,7 @@ transform: translateX(0);
     
     .info-section {
         background-color: var(--secondary-color);
-        color: white;
+        color: var(--white-text);
         padding-top: 3rem;
         padding-bottom: 3rem;
         display: flex;
@@ -1009,7 +1020,7 @@ transform: translateX(0);
     
     
     .lil-about-us {
-        color: white;
+        color: var(--white-text);
         display: flex;
         flex-direction: row;
         width: 100%;
